adding stats section to the html file

--- a/index.html
+++ b/index.html
@@ -60,7 +60,14 @@
 
 		</div>
 
-		
+		<div>
+			<h3>Time stats</h3>
+			<div id="stats">
+				<div>Live</div>
+				<div>Last</div>
+				<div>Best</div>
+			</div>
+		</div>
 
 		<p>
 
