fixing stats container + adding initial results

--- a/index.html
+++ b/index.html
@@ -60,12 +60,21 @@
 
 		</div>
 
-		<div>
+		<div id="stats-container">
 			<h3>Time stats</h3>
 			<div id="stats">
-				<div>Live</div>
-				<div>Last</div>
-				<div>Best</div>
+				<div class="time">
+					<h3>Live</h3>
+					<h4><span id="seconds">00</span>:<span id="tens">00</span></h4>
+				</div>
+				<div class="time">
+					<h3>Last</h3>
+					<h4 id="last">00:00</h4>
+				</div>
+				<div class="time">
+					<h3>Best</h3>
+					<h4 id="best">00:00</h4>
+				</div>
 			</div>
 		</div>
 
